@@ -983,6 +983,19 @@ it 'compile transformer class' do
   Moneta::Transformer::MarshalBase64KeyMarshalBase64Value.should_not be_nil
 end}
   },
+  'transformer_marshal_hex' => {
+    :build => %{Moneta.build do
+  use :Transformer, :key => [:marshal, :hex], :value => [:marshal, :hex]
+  adapter :Memory
+end},
+    :specs => STANDARD_SPECS.without_persist,
+    :load_value => '::Marshal.load([value].pack(\'H*\'))',
+    :tests => %{
+it 'compile transformer class' do
+  store.should_not be_nil
+  Moneta::Transformer::MarshalHexKeyMarshalHexValue.should_not be_nil
+end}
+  },
   'transformer_marshal_prefix' => {
     :build => %{Moneta.build do
   use :Transformer, :key => [:marshal, :prefix], :value => :marshal, :prefix => 'moneta'
